--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "cookie": "^0.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.18.0"
   },
   "devDependencies": {
